--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -56,14 +56,7 @@
       });
 
   $("#save").click(function() {
-    updateWidgetData();
-  });
-
-  $(document).ready(function() {
-    initializeEditable();
-    initializeSortable();
-    initializeCloseButon();
-
+    updatePageData();
   });
 </script>
 
