--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -6,7 +6,7 @@
       <div class="col-md-4">
         <div id="rating">
  
-      <h2><%= link_to site.title, site_page_path(site, site.first_page) %></a></h2>
+      <h2><%= link_to site.title, site_page_path(site, site.first_page) %></h2>
          <%= image_tag site.picture.url, class:"img-responsive img-thumbnail", style:"height:200px;" %> 
          <p class="description"><%= site.get_short_description %></p>
         <% if can? :read, site %>
@@ -15,9 +15,7 @@
         <% if can? :update, site %>
                <p> <%= link_to 'Edit', edit_site_page_path(site, site.first_page), class: "btn btn-primary" %> </p>
         <% end %>
-        <% if current_user %>
-             <%= rating_for site, "original_score", disable_after_rate: true, imdb_avg: true, cancel: false %>
-        <% end %>
+        <%= rating_for site, "original_score", disable_after_rate: true, imdb_avg: true, cancel: false %>
         <p>
           <i class="icon-user"></i> by <%= site.user.name %>
           | <i class="icon-calendar"></i> <%= site.created_at %>
