--- a/app/views/sites/_flash_messages.html.erb
+++ b/app/views/sites/_flash_messages.html.erb
@@ -1,9 +1,9 @@
 <div id="flash_messages">
   <% flash.each do |type, message| %>
   <% unless message.blank? %>
-    <div class='alert alert-<%= type %> alert-dismissible' role='alert'>
-    	<button class='close' data-dismiss='alert'>×</button>
-    	<%= message.html_safe %>
+    <div class='alert alert-<%= type %> alert-dismissible fade in' role='alert'>
+      <a class="close" data-dismiss="alert" aria-label="close">&times;</a>
+      <%= message.html_safe %>
     </div>
     <% end %>
   <% end %>
