pagination styles added. search bug fixes

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -8,7 +8,7 @@
       </hgroup>
 
       <section class="col-xs-12 col-sm-6 col-md-12">
-        <% @results.each do |result| %>
+        <% @result.each do |result| %>
             <article class="search-result row">
               <div class="col-xs-12 col-sm-12 col-md-3">
                 <div class="thumbnail"><img src="<%= result.img %>"/></div>
@@ -37,3 +37,10 @@
       </hgroup>
     </div>
 <% end %>
+
+<div style="text-align: center">
+  <%= will_paginate @result,
+                    :previous_label => "&#8249;",
+                    :next_label => "&#8250;"
+  %>
+</div>
