--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -15,13 +15,12 @@
             <% end %>
               <%= rating_for site, "original_score", disable_after_rate: true, imdb_avg: true, cancel: false %>
             <p>
-              <i class="icon-user"></i> by <%= site.user.name %>
-              | <i class="icon-calendar"></i> <%= site.created_at.to_formatted_s(:short) %>
-              | <i class="icon-comment"></i> <%= link_to "#{site.comments.count} Comments", site_path(site) %>
+              <i class="icon-user"></i><%= site.user.name %>
+              | <i class="icon-calendar"></i> <%= I18n.l site.created_at, format: :long %>
             </p>
             <p>
               <% if site.tag_list.count > 0 %>
-                  <i class="icon-tags"></i> Tags :
+                  <i class="icon-tags"></i><%= I18n.t('tags') %> :
                   <% site.tag_list.each do |tag| %>
                     <%= link_to search_path(tag: tag) do %><span class="label label-info"><%= tag %></span><% end %>
                   <% end %>
