--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,27 @@
-<h2><%= I18n.t('devise.confirmations.new.resend_confirmation_instructions') %></h2>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+<div class="text-center" style="padding:50px 0">
+  <div class="logo"><%= I18n.t('devise.confirmations.new.resend_confirmation_instructions') %></div>
+  <!-- Main Form -->
+  <div class="login-form-1">
+    <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), :html => {:class => 'text-left', method: "post"}) do |f| %>
+        <%= f.hidden_field :reset_password_token %>
+        <div class="login-form-main-message"></div>
+        <div class="main-login-form">
+          <div class="login-group">
+            <div class="form-group">
+              <%= f.label :email, class: "sr-only"%>
+              <%= f.email_field :email, autofocus: true, placeholder: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email), class: "form-control"%>
+            </div>
+          </div>
+          <%= f.submit ">", class: "login-button" do%>
+              <i class="fa fa-chevron-right"></i>
+          <%end%>
+
+        </div>
+        <%= render "devise/shared/links" %>
+    <% end %>
   </div>
-
-  <div class="actions">
-    <%= f.submit I18n.t('devise.confirmations.new.resend_confirmation_instructions') %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <!-- end:Main Form -->
+</div>
