--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,47 @@
-<h2><%= I18n.t('devise.registrations.new.sign_up') %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "off"  %>
+
+<!-- All the files that are required -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.13.1/jquery.validate.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<%= devise_error_messages! %>
+
+<!-- REGISTRATION FORM -->
+<div class="text-center" style="padding:50px 0">
+  <div class="logo"><%= I18n.t('devise.registrations.new.sign_up') %></div>
+  <!-- Main Form -->
+  <div class="login-form-1">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => 'text-left', :id=>'register-form'}) do |f| %>
+        <div class="login-form-main-message"></div>
+        <div class="main-login-form">
+          <div class="login-group">
+            <div class="form-group">
+              <%= f.label :name, class: "sr-only" %>
+              <%= f.text_field :name, autofocus: true, autocomplete: "off", class: "form-control", placeholder: " name" %>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :email, class: "sr-only"%>
+              <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: " email"%>
+            </div>
+            <div class="form-group">
+              <%= f.label :password, class: "sr-only" %>
+              <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: " password"%>
+
+            </div>
+            <div class="form-group">
+              <%= f.label :password_confirmation, class: "sr-only" %>
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: " confirm password" %>
+            </div>
+
+          </div>
+          <%= f.submit ">", class: "login-button" do%>
+              <i class="fa fa-chevron-right"></i>
+          <%end%>
+        </div>
+        <%= render "devise/shared/links" %>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> <%= I18n.t('devise.characters_minimum') %>)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit I18n.t('devise.registrations.new.sign_up') %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <!-- end:Main Form -->
+</div>
