--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -6,10 +6,8 @@
     <%= f.text_area :content,  class: "form-control", placeholder: t('comments.your_comment') %>
   </div>
   
-  <div class="form-group col-sm-4">
-    <%= f.submit class:"btn btn-primary" do%>
-    <i class="fa fa-reply" aria-hidden="true"></i> 
-    <% end %>
+  <div class="actions col-sm-4" >
+    <%= f.submit class: "btn btn-primary" %>
   </div>
   </div>
 <% end %>
