--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -10,20 +10,16 @@
             <% if can? :read, site %>
               <p> <%= link_to 'More info', site_path(site), class: "btn btn-primary" %> </p>
             <% end %>
-            <% if can? :update, site %>
-              <p> <%= link_to 'Edit', edit_site_page_path(site, site.first_page), class: "btn btn-primary" %> </p>
-            <% end %>
               <%= rating_for site, "original_score", disable_after_rate: true, imdb_avg: true, cancel: false %>
             <p>
               <i class="icon-user"></i> by <%= site.user.name %>
               | <i class="icon-calendar"></i> <%= site.created_at.to_formatted_s(:short) %>
-              | <i class="icon-comment"></i> <%= link_to "#{site.comments.count} Comments", site_path(site) %>
             </p>
             <p>
               <% if site.tag_list.count > 0 %>
                   <i class="icon-tags"></i> Tags :
                   <% site.tag_list.each do |tag| %>
-                    <%= link_to search_path(tag: tag) do %><span class="label label-info"><%= tag %></span><% end %>
+                    <%= link_to sites_path(tag: tag) do %><span class="label label-info"><%= tag %></span><% end %>
                   <% end %>
               <% end %>
             </p>
