--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -6,19 +6,38 @@
           <h1><%= link_to @site.title, site_page_path(@site, @site.first_page) %></h1>
           <p class="lead"><i class="fa fa-user"></i> by <%= @site.user.name %></p>
         </div>
+
         <div class="col-xs-6">
           <%= image_tag @site.picture.url, class:"img-responsive img-thumbnail", style:"height:100px;float:right;"%>
         </div>
       </div>
+      <div class="row">
+
       <hr>
+      <div class="col-md-8">
       <p><i class="fa fa-calendar"></i> Posted on <%= I18n.l (@site.created_at) %></p>
       <p><i class="fa fa-tags"></i> Tags:
         <% @site.tag_list.each do |tag| %>
-            <%= link_to search_path(tag: tag) do %><span class="badge badge-info"><%= tag %></span>
+            <%= link_to sites_path(tag: tag) do %><span class="badge badge-info"><%= tag %></span>
             <% end %>
         <% end %>
       </p>
-
+    </div>
+    <div class="col-md-4 text-right">
+      <div class="btn-group">
+          <% if can? :update, @site %>
+            <%= link_to edit_site_page_path(@site, @site.first_page), class: "btn btn-primary" do%>
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+            <% end %>
+            <% end %>
+          <% if can? :destroy, @site %>
+              <%= link_to site_path(@site), method: :delete, class: "btn btn-primary" do %> 
+                <i class="fa fa-trash" aria-hidden="true"></i>
+              <% end %>
+            <% end %>
+        </div>
+        </div>
+      </div>
       <hr>
       <p class="lead" > <strong>Description
         </br>
