--- a/app/views/template/_horizontal.html.erb
+++ b/app/views/template/_horizontal.html.erb
@@ -23,10 +23,8 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 height-column" id="content">
+    <div class="col-sm-12 height-column" id="content"  style="overflow:hidden;">
       <%= @body.html_safe %>
     </div>
   </div>
-</div>
