Fix provider class, .well on index page and add readme on solr

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -194,11 +194,13 @@ button.close {
   margin-bottom: 7px;
 }
 
-
-.editor-panel{
-	padding:10px 0;
+.editor-panel {
+  padding: 10px 0;
   min-height: 400px;
+}
 
+.well:first-child {
+  margin-top: 20px;
 }
 
 
