--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,7 +1,7 @@
 <%- if devise_mapping.omniauthable? %>
     <%- resource_class.omniauth_providers.each do |provider| %>
         <a href="<%= omniauth_authorize_path(resource_name, provider) %>", class="btn btn-social-icon btn-lg">
-          <span class="fa fa-<%= iconClass provider %>"></span>
+          <span class="fa fa-<%= provider_class provider %>"></span>
         </a>
     <% end -%>
 <% end -%>
