Fix search styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -167,11 +167,12 @@ button.close {
   }
 }
 
-.col-sm-9, .col-sm-3, .col-sm-6, .col-sm-12 {
-  min-height: 200px;
-  //margin: 0 10px;
-
+.sites {
+  .col-sm-9, .col-sm-3, .col-sm-6, .col-sm-12 {
+    min-height: 200px;
+  }
 }
+
 
 .profile-userpic img {
   float: none;
@@ -201,6 +202,15 @@ button.close {
 
 .well:first-child {
   margin-top: 20px;
+}
+
+.form-inline {
+  display: inline-block;
+
+  div {
+    display: inline-block;
+    margin: 5px 0;
+  }
 }
 
 
