--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,9 +1,9 @@
 <%= render "searches/form" %>
-<div class="row">
-<div class="col-sm-8">
-<%= render "sites/sites" %>
-</div>
-<div class="col-sm-4">
-  <%= render "sites/sidebar" %>
- </div>   
+<div class="sites row">
+  <div class="col-sm-8">
+    <%= render "sites/sites" %>
+  </div>
+  <div class="col-sm-4">
+    <%= render "sites/sidebar" %>
+  </div>
 </div>
