--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -209,10 +209,21 @@ button.close {
 
   div {
     display: inline-block;
-    margin: 5px 0;
+    margin: 3px 0;
   }
 }
 
+.user-info i {
+  margin-right: 5px;
+}
+
+.site-rating div {
+  margin: 0 auto;
+}
+
+.site-tile {
+  margin-left: 15px;
+}
 
 
 
