--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
   
   <div class="actions col-sm-4" >
-    <%= f.submit class: "btn btn-primary" %>
+    <%= f.submit I18n.t('comments.add'), class: "btn btn-primary" %>
   </div>
   </div>
 <% end %>
