--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -15,7 +15,7 @@
 
       <hr>
       <div class="col-md-8">
-      <p><i class="fa fa-calendar"></i> Posted on <%= I18n.l (@site.created_at) %></p>
+      <p><i class="fa fa-calendar"></i> Posted on <%= I18n.l(@site.created_at, format: :short) %></p>
       <p><i class="fa fa-tags"></i> Tags:
         <% @site.tag_list.each do |tag| %>
             <%= link_to sites_path(tag: tag) do %><span class="badge badge-info"><%= tag %></span>
