--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<div class="col-sm-8">
+<div class="col-sm-6 col-lg-8">
   <%= render "sites/sites" %>
 </div>
-<div class="col-sm-4">
+<div class="col-sm-6 col-lg-4">
   <div class="well panel panel-default">
     <div class="panel-body">
       <div class="row">
@@ -9,23 +9,23 @@
           <img src="http://api.randomuser.me/portraits/women/21.jpg" alt="" class="center-block img-circle img-thumbnail img-responsive">
         </div>
         <!--/col-->
-        <div class="col-xs-12 col-sm-8">
+        <div class="col-xs-12 col-sm-8 user-info">
           <h2><%= current_user.name %></h2>
           <p><i class="glyphicon glyphicon-envelope"></i> <%= current_user.email %></p>
-          <p><i class="glyphicon glyphicon-calendar"></i><%=I18n.l (current_user.created_at) %></p>
+          <p><i class="glyphicon glyphicon-calendar"></i><%=I18n.l(current_user.created_at, format: :short) %></p>
         </div>
         <!--/col-->
         <div class="clearfix"></div>
         <div class="col-xs-12 col-sm-4">
           <h2><strong><%= @user.sites.count %></strong></h2>
-          <p><small><%= I18n.t 'activerecord.models.site', count: @user.sites.count %></small></p>
+          <p><%= I18n.t 'activerecord.models.site', count: @user.sites.count %></p>
           <button type="button" class="btn btn-primary"><span class="fa fa-gear"></span> Options </button>
 
         </div>
         <!--/col-->
         <div class="col-xs-12 col-sm-4">
           <h2><strong><%= @user.comments.count %></strong></h2>
-          <p><small><%= I18n.t 'activerecord.models.comment', count: @user.comments.count %></small></p>
+          <p><%= I18n.t 'activerecord.models.comment', count: @user.comments.count %></p>
         </div>
 
         <!--/col-->
