--- a/app/views/sites/_sites.html.erb
+++ b/app/views/sites/_sites.html.erb
@@ -8,7 +8,7 @@
             <%= image_tag site.picture.url, class:"img-responsive img-thumbnail", style:"height:200px;" %>
             <p class="description"><%= site.get_short_description %></p>
             <% if can? :read, site %>
-              <p> <%= link_to 'More info', site_path(site), class: "btn btn-primary" %> </p>
+              <p> <%= link_to t('site.moreInfo'), site_path(site), class: "btn btn-primary" %> </p>
             <% end %>
               <%= rating_for site, "original_score", disable_after_rate: true, imdb_avg: true, cancel: false %>
             <p>
