--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,14 +1,14 @@
- <% if can? :create, Comment %>
+<% if can? :create, Comment %>
     <%= render partial: "comments/form", locals: { site: site } %>
 <% end %>
 
 <ul>
-    <% site.comments.persisted.each do |comment| %>
-    <li>
-        <h3><i class="fa fa-comment"></i> <%= comment.user.name %> says:
-            <small> <%= l comment.created_at, format: :long %> </small>
-        </h3>
-        <p><%= comment.content %></p>
-    </li>
-    <% end %>
+  <% site.comments.persisted.each do |comment| %>
+      <li>
+        <h3><i class="fa fa-comment"></i> <%= comment.content %></h3>
+        <p><%= comment.user.name %>,
+          <small> <%= l comment.created_at, format: :long %> </small>
+        </p>
+      </li>
+  <% end %>
 </ul>
