pictures upload fixed, new page empty exception fixed

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -167,7 +167,7 @@ button.close {
   }
 }
 
-.sites {
+.height-column {
   .col-sm-9, .col-sm-3, .col-sm-6, .col-sm-12 {
     min-height: 200px;
   }
