--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -5,7 +5,7 @@
           <%= text_field_tag :searches, params[:searches],  class: "form-control", placeholder: t('menu.search') %>
         </div>
         <div>
-          <%= select_tag 'filter', options_for_select(searchOptions, params[:filter] || "Sites"), class: "form-control" %>
+          <%= select_tag 'filter', options_for_select(["Comments", "Sites", "Pages"], params[:filter] || "Sites"), class: "form-control" %>
         </div>
     </div>
     <div>
