Show page fixed endless page

--- a/app/views/template/_vertical.html.erb
+++ b/app/views/template/_vertical.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row content height-column">
+  <div class="row content height-column owerflow-row">
     <div class="col-sm-3 sidenav height-column <%= @site.theme %>">
       <div class="profile-userpic">
         <img src="<%= @site.picture.url %>" class="img-rounded" alt="">
