--- a/app/views/template/_horizontal.html.erb
+++ b/app/views/template/_horizontal.html.erb
@@ -24,7 +24,7 @@
   </div>
 </nav>
   <div class="row">
-    <div class="col-sm-12 height-column" id="content"  style="overflow:hidden;">
+    <div class="col-sm-12 height-column owerflow-row" id="content">
       <%= @body.html_safe %>
     </div>
   </div>
